@@ -45,28 +45,28 @@ public class ReviewServiceTest {
     @Test
     public void testGoodGetUserReviews() {
         int testUserId = 1;
-        logWineDao.reviews(testUserId, 1, 5, "Great wine!", "12/12/12", new ArrayList<>(List.of("fruity", "smooth")), new ArrayList<>(List.of("fruity", "smooth")), false);
-        logWineDao.reviews(testUserId, 2, 4, "Good wine!", "12/12/12", new ArrayList<>(List.of("dry", "bold")), new ArrayList<>(List.of("dry", "bold")), false);
+        logWineDao.reviews(testUserId, 1, 5, "Great wine!", "12/12/12", new ArrayList<>(List.of("fruity", "smooth")), false);
+        logWineDao.reviews(testUserId, 2, 4, "Good wine!", "12/12/12", new ArrayList<>(List.of("dry", "bold")), false);
 
-        ArrayList<Review> userReviews = reviewService.getUserReviews(testUserId);
+        ArrayList<Review> userReviews = ReviewService.getUserReviews(testUserId);
 
         assertNotNull(userReviews);
         assertEquals(2, userReviews.size());
-        assertEquals(userReviews.getFirst().getUid(), testUserId);
-        assertEquals(userReviews.getFirst().getWid(), 1);
-        assertEquals(userReviews.getFirst().getRating(), 5);
-        assertEquals(userReviews.getFirst().getReviewDescription(), "Great wine!");
-        assertEquals(userReviews.getFirst().getReviewDate(), "12/12/12");
-        assertEquals(userReviews.getFirst().getTagsSelected(), new ArrayList<>(List.of("fruity", "smooth")));
+        assertEquals(userReviews.get(0).getUid(), testUserId);
+        assertEquals(userReviews.get(0).getWid(), 1);
+        assertEquals(userReviews.get(0).getRating(), 5);
+        assertEquals(userReviews.get(0).getReviewDescription(), "Great wine!");
+        assertEquals(userReviews.get(0).getReviewDate(), "12/12/12");
+        assertEquals(userReviews.get(0).getTagsSelected(), new ArrayList<>(List.of("fruity", "smooth")));
     }
 
     @Test
     public void testBadGetUserReviews() {
         int testUserId = 1;
-        logWineDao.reviews(testUserId, 1, 5, "Great wine!", "12/12/12", new ArrayList<>(List.of("fruity", "smooth")), new ArrayList<>(List.of("fruity", "smooth")), false);
-        logWineDao.reviews(testUserId, 2, 4, "Good wine!", "12/12/12", new ArrayList<>(List.of("dry", "bold")), new ArrayList<>(List.of("dry", "bold")), false);
+        logWineDao.reviews(testUserId, 1, 5, "Great wine!", "12/12/12", new ArrayList<>(List.of("fruity", "smooth")), false);
+        logWineDao.reviews(testUserId, 2, 4, "Good wine!", "12/12/12", new ArrayList<>(List.of("dry", "bold")), false);
 
-        ArrayList<Review> userReviews = reviewService.getUserReviews(testUserId);
+        ArrayList<Review> userReviews = ReviewService.getUserReviews(testUserId);
 
         assertNotNull(userReviews);
         assertNotEquals(5, userReviews.size());
@@ -79,14 +79,14 @@ public class ReviewServiceTest {
     @Test
     public void testReviewDoesExist() {
         int testUserId = 1;
-        logWineDao.reviews(testUserId, 1, 5, "Great wine!", "12/12/12", new ArrayList<>(List.of("fruity", "smooth")), new ArrayList<>(List.of("fruity", "smooth")), false);
+        logWineDao.reviews(testUserId, 1, 5, "Great wine!", "12/12/12", new ArrayList<>(List.of("fruity", "smooth")), false);
         assertTrue(reviewService.reviewExists(1,1));
     }
 
     @Test
     public void testReviewDoesNotExist() {
         int testUserId = 1;
-        logWineDao.reviews(testUserId, 1, 5, "Great wine!", "12/12/12", new ArrayList<>(List.of("fruity", "smooth")), new ArrayList<>(List.of("fruity", "smooth")), false);
+        logWineDao.reviews(testUserId, 1, 5, "Great wine!", "12/12/12", new ArrayList<>(List.of("fruity", "smooth")), false);
         assertFalse(reviewService.reviewExists(1,2));
         assertFalse(reviewService.reviewExists(2,1));
     }
@@ -98,14 +98,13 @@ public class ReviewServiceTest {
         int rating = 5;
         String desc = "Great wine!";
         String date = "12/12/12";
-        ArrayList<String> selectedTags = new ArrayList<>(List.of("fruity", "smooth"));
-        ArrayList<String> likedTags = new ArrayList<>(List.of("fruity", "smooth"));
+        ArrayList<String> tags = new ArrayList<>(List.of("fruity", "smooth"));
 
-        Review testReview = new Review(uid, wid, rating, desc, date, selectedTags, likedTags);
-        logWineDao.reviews(uid, wid, rating, desc, date, selectedTags, likedTags, false);
+        Review testReview = new Review(uid, wid, rating, desc, date, tags);
+        logWineDao.reviews(uid, wid, rating, desc, date, tags, false);
 
         assertTrue(reviewService.reviewExists(1,3));
-        reviewService.deleteReview(testReview);
+        ReviewService.deleteReview(rating, testReview);
         assertFalse(reviewService.reviewExists(1,3));
     }
 
@@ -116,11 +115,9 @@ public class ReviewServiceTest {
         int rating = 5;
         String desc = "Great wine!";
         String date = "12/12/12";
-        ArrayList<String> selectedTags = new ArrayList<>(List.of("fruity", "smooth"));
-        ArrayList<String> likedTags = new ArrayList<>(List.of("fruity", "smooth"));
+        ArrayList<String> tags = new ArrayList<>(List.of("fruity", "smooth"));
 
-        Review testReview = new Review(uid, wid, rating, desc, date, selectedTags, likedTags);
-
+        Review testReview = new Review(uid, wid, rating, desc, date, tags);
         reviewService.setCurrentReview(testReview);
         Wine wine =  ReviewService.getCurrentWine();
         assertEquals(wine.getWineId(), 3);
@@ -136,10 +133,9 @@ public class ReviewServiceTest {
         int rating = 5;
         String desc = "Great wine!";
         String date = "12/12/12";
-        ArrayList<String> selectedTags = new ArrayList<>(List.of("fruity", "smooth"));
-        ArrayList<String> likedTags = new ArrayList<>(List.of("fruity", "smooth"));
+        ArrayList<String> tags = new ArrayList<>(List.of("fruity", "smooth"));
 
-        Review testReview = new Review(uid, wid, rating, desc, date, selectedTags, likedTags);
+        Review testReview = new Review(uid, wid, rating, desc, date, tags);
         reviewService.setCurrentReview(testReview);
         assertThrows(NullPointerException.class,
                 ReviewService::getCurrentWine);
